# llm-reliability-harness

./: .gitignore  README.md  pyproject.toml
data/: tickets_eval.jsonl
llm_harness/: __init__.py  cli.py  config.py
llm_harness/eval/: dataset.py  normalize.py  rules.py  runner.py  schema.py  scoring.py
llm_harness/logging/: __init__.py  events.py
llm_harness/providers/: __init__.py  base.py  dummy.py  ollama.py  openai.py
llm_harness/reporting/: summarize.py
llm_harness/utils/: time.py
llm_reliability_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: make_report.py  run_eval.py
tests/: test_dataset_load.py  test_imports.py  test_normalize.py  test_ollama_provider.py  test_regressions_7_failures.py  test_reporting_and_scoring.py  test_rules.py  test_rules_overrides.py  test_runner_dummy.py
