[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-reliability-harness"
version = "0.1.0"
description = "LLM reliability and observability toolkit scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
rich = [
  "rich>=13.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["llm_harness"]
